[gd_scene load_steps=10 format=3 uid="uid://4klwniu6byip"]

[ext_resource type="PackedScene" uid="uid://bpc7gobu6kj8j" path="res://scenes/rows.tscn" id="1_28k0w"]
[ext_resource type="Script" path="res://scripts/test_level.gd" id="1_vlejl"]
[ext_resource type="Texture2D" uid="uid://dftowjd550ilf" path="res://sprites/background.png" id="2_3byw7"]
[ext_resource type="PackedScene" uid="uid://dglnpuqp6qfxp" path="res://scenes/room_purchasing_menu.tscn" id="2_orvbb"]
[ext_resource type="Texture2D" uid="uid://u662yy1q8uj5" path="res://sprites/gold_pile_1.png" id="4_biutf"]
[ext_resource type="FontFile" uid="uid://ki3mx5xgoc23" path="res://fonts/dungeon_crawler_cb.ttf" id="4_vktw7"]
[ext_resource type="AudioStream" uid="uid://d0ewgtnx58xai" path="res://sounds/DungeonLoopFinal.wav" id="5_5c0d2"]

[sub_resource type="MeshTexture" id="MeshTexture_lkakn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j8af6"]
size = Vector2(76, 516)

[node name="test_level" type="Node2D"]
script = ExtResource("1_vlejl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3byw7")

[node name="Camera" type="Camera2D" parent="."]

[node name="Row1" parent="." instance=ExtResource("1_28k0w")]
visible = false
position = Vector2(2, -130)
scale = Vector2(1.8, 1.8)

[node name="Sprite2D2" type="Sprite2D" parent="Row1"]
position = Vector2(-281.667, 1.11111)
scale = Vector2(0.555556, 0.555556)
texture = ExtResource("4_biutf")

[node name="Row2" parent="." instance=ExtResource("1_28k0w")]
visible = false
position = Vector2(2, 0)
scale = Vector2(1.8, 1.8)

[node name="Sprite2D2" type="Sprite2D" parent="Row2"]
position = Vector2(-281.667, -0.555556)
scale = Vector2(0.555556, 0.555556)
texture = ExtResource("4_biutf")

[node name="Row3" parent="." instance=ExtResource("1_28k0w")]
visible = false
position = Vector2(2, 129)
scale = Vector2(1.8, 1.8)

[node name="Sprite2D3" type="Sprite2D" parent="Row3"]
position = Vector2(-281.667, 1.66666)
scale = Vector2(0.555556, 0.555556)
texture = ExtResource("4_biutf")

[node name="Row4" parent="." instance=ExtResource("1_28k0w")]
visible = false
position = Vector2(2, 258)
scale = Vector2(1.8, 1.8)

[node name="Sprite2D4" type="Sprite2D" parent="Row4"]
position = Vector2(-281.667, -1.66667)
scale = Vector2(0.555556, 0.555556)
texture = ExtResource("4_biutf")

[node name="RoomPurchasingMenu" parent="." instance=ExtResource("2_orvbb")]
position = Vector2(-1, -264)
scale = Vector2(1.5, 1.5)

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 521.0
offset_top = 286.0
offset_right = 569.0
offset_bottom = 317.0
scale = Vector2(1.00697, 1)
theme_override_fonts/font = ExtResource("4_vktw7")
text = "Start"
icon = SubResource("MeshTexture_lkakn")

[node name="GoldCache" type="Area2D" parent="."]
position = Vector2(-477, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoldCache"]
position = Vector2(-28, 65)
shape = SubResource("RectangleShape2D_j8af6")

[node name="MonsterCleaner" type="Area2D" parent="."]
position = Vector2(704, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MonsterCleaner"]
position = Vector2(-27, 65)
shape = SubResource("RectangleShape2D_j8af6")

[node name="HeroWaveTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5c0d2")
autoplay = true

[node name="DelayTimer" type="Timer" parent="."]

[node name="LevelLabel" type="Label" parent="."]
offset_left = -564.0
offset_top = -319.0
offset_right = -399.0
offset_bottom = -285.0
theme_override_fonts/font = ExtResource("4_vktw7")
theme_override_font_sizes/font_size = 30
text = "Level Name"

[node name="Popup" type="Popup" parent="."]
title = "Announcement"
initial_position = 1
size = Vector2i(400, 103)
visible = true
borderless = false

[node name="Label" type="Label" parent="Popup"]
offset_right = 40.0
offset_bottom = 23.0
text = "
Protect your gold from dungeon delving heroes by 
constructing obstacles. Survive until time runs out!"

[node name="Timer" type="Timer" parent="."]

[node name="levelTimer" type="Timer" parent="."]

[node name="LevelTimerLabel" type="Label" parent="."]
offset_left = 420.0
offset_top = -305.0
offset_right = 494.0
offset_bottom = -271.0
scale = Vector2(1.65784, 1.92315)
theme_override_fonts/font = ExtResource("4_vktw7")
theme_override_font_sizes/font_size = 16
text = "Time Left:
XXX"
horizontal_alignment = 1

[connection signal="money_update" from="." to="." method="_on_money_update"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="GoldCache" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="MonsterCleaner" to="." method="_on_monster_cleaner_body_entered"]
[connection signal="body_entered" from="MonsterCleaner" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="HeroWaveTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="levelTimer" to="." method="countdown"]
